# Student-Recommendation-System

./: .dockerignore  .env.example  .gitignore  Dockerfile  MCP.md  README.md  VALIDATION_SUMMARY.md  docker-compose.yml  requirements.txt  test_validation.py
app/: main.py  models.py  validators.py
app/data/: dummy_data.json  student.json
app/routes/: recommendation.py
mcp_server/: client.py  pyproject.toml  run_client.sh  server.py
static/: index.html
